--- a/bindings/wss10-binding/pom.xml
+++ b/bindings/wss10-binding/pom.xml
@@ -38,9 +38,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.swssf</groupId>
-            <artifactId>xmldsig-binding</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <version>${xmlsec.version}</version>
         </dependency>
         <dependency>
             <groupId>org.swssf</groupId>
@@ -91,10 +91,12 @@
                             doesn't respect the catalog and will do online lookups :-( -->
                             <strict>false</strict>
                             <episodes>
+<!--
                                 <episode>
-                                    <groupId>org.swssf</groupId>
-                                    <artifactId>xmldsig-binding</artifactId>
+                                    <groupId>org.apache.santuario</groupId>
+                                    <artifactId>xmlsec</artifactId>
                                 </episode>
+-->
                                 <episode>
                                     <groupId>org.swssf</groupId>
                                     <artifactId>wsu10-binding</artifactId>
