Upgrading to Santuario 2.0.0-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/swssf@1354005 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <xmlsec.version>1.5.2</xmlsec.version>
+        <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
         <wss4j.version>1.6.6</wss4j.version>
         <neethi.version>3.0.2</neethi.version>
         <targetJdk>1.6</targetJdk>
