Use a local jaxb binding file to avoid problems with the generated episode files.
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/swssf@1354064 13f79535-47bb-0310-9956-ffa450edef68

--- a/bindings/wss10-binding/pom.xml
+++ b/bindings/wss10-binding/pom.xml
@@ -81,6 +81,7 @@
                             <bindingDirectory>${basedir}/src/main/resources</bindingDirectory>
                             <bindingIncludes>
                                 <bindingInclude>wss10.xjb</bindingInclude>
+                                <bindingInclude>xmldsig.xjb</bindingInclude>
                             </bindingIncludes>
                             <catalog>${basedir}/src/main/resources/wss10.cat</catalog>
                             <forceRegenerate>false</forceRegenerate>
@@ -91,10 +92,6 @@
                             doesn't respect the catalog and will do online lookups :-( -->
                             <strict>false</strict>
                             <episodes>
-                                <episode>
-                                    <groupId>org.apache.santuario</groupId>
-                                    <artifactId>xmlsec</artifactId>
-                                </episode>
                                 <episode>
                                     <groupId>org.swssf</groupId>
                                     <artifactId>wsu10-binding</artifactId>
