--- a/bindings/ws-secureconversation-binding/pom.xml
+++ b/bindings/ws-secureconversation-binding/pom.xml
@@ -38,9 +38,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.swssf</groupId>
-            <artifactId>xmldsig-binding</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <version>${xmlsec.version}</version>
         </dependency>
         <dependency>
             <groupId>org.swssf</groupId>
@@ -98,10 +98,6 @@
                                 </plugin>
                             </plugins>
                             <episodes>
-                                <episode>
-                                    <groupId>org.swssf</groupId>
-                                    <artifactId>xmldsig-binding</artifactId>
-                                </episode>
                                 <episode>
                                     <groupId>org.swssf</groupId>
                                     <artifactId>wsu10-binding</artifactId>
