--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,6 @@
 
     <modules>
         <module>bindings</module>
-        <module>streaming-xml-security</module>
         <module>streaming-ws-security</module>
         <module>rampart-policy</module>
         <module>streaming-ws-policy</module>
@@ -49,6 +48,7 @@
         <wss4j.version>1.6.6</wss4j.version>
         <neethi.version>3.0.2</neethi.version>
         <targetJdk>1.6</targetJdk>
+        <bcprov.version>1.46</bcprov.version>
     </properties>
 
     <dependencyManagement>
@@ -148,6 +148,35 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>jdk15</id>
+            <activation>
+                <jdk>1.5</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcprov-jdk15</artifactId>
+                    <version>${bcprov.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>1.6</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcprov-jdk16</artifactId>
+                    <version>${bcprov.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     <reporting>
         <plugins>
             <plugin>
