--- a/streaming-ws-policy/pom.xml
+++ b/streaming-ws-policy/pom.xml
@@ -50,9 +50,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.swssf</groupId>
-            <artifactId>streaming-xml-security</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <version>${xmlsec.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
