--- a/streaming-ws-security/pom.xml
+++ b/streaming-ws-security/pom.xml
@@ -39,11 +39,6 @@
     <dependencies>
         <dependency>
             <groupId>org.swssf</groupId>
-            <artifactId>streaming-xml-security</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.swssf</groupId>
             <artifactId>wss10-binding</artifactId>
             <version>1.0.0</version>
         </dependency>
@@ -203,9 +198,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.swssf</groupId>
-            <artifactId>streaming-xml-security</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <version>${xmlsec.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
