--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,17 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
-        <wss4j.version>1.6.6</wss4j.version>
-        <neethi.version>3.0.2</neethi.version>
         <targetJdk>1.6</targetJdk>
+
         <bcprov.version>1.46</bcprov.version>
+        <log4j.version>1.2.16</log4j.version>
+        <neethi.version>3.0.2</neethi.version>
+        <slf4j.version>1.6.1</slf4j.version>
+        <woodstox.core.asl.version>4.1.3</woodstox.core.asl.version>
+        <wss4j.version>1.6.6</wss4j.version>
+        <xalan.version>2.7.1</xalan.version>
+        <xerces.version>2.9.1</xerces.version>
+        <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
     </properties>
 
     <dependencyManagement>
@@ -56,7 +62,7 @@
             <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
-                <version>2.9.1</version>
+                <version>${xerces.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.santuario</groupId>
@@ -76,7 +82,7 @@
             <dependency>
                 <groupId>org.codehaus.woodstox</groupId>
                 <artifactId>woodstox-core-asl</artifactId>
-                <version>4.1.3</version>
+                <version>${woodstox.core.asl.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
