--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>wss4j</artifactId>
     <packaging>bundle</packaging>
     <name>WSS4J</name>
-    <version>1.6.7-SNAPSHOT</version>
+    <version>1.6.7</version>
     <description>
         The Apache WSS4J project provides a Java implementation of the primary security standards 
         for Web Services, namely the OASIS Web Services Security (WS-Security) specifications 
