--- a/bindings/ws-secureconversation-binding/pom.xml
+++ b/bindings/ws-secureconversation-binding/pom.xml
@@ -24,9 +24,9 @@
   
     <parent>
         <groupId>org.apache.ws.security</groupId>
-        <artifactId>wss4j</artifactId>
+        <artifactId>wss4j-parent</artifactId>
         <version>2.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <groupId>org.swssf</groupId>
     <artifactId>ws-secureconversation-binding</artifactId>
@@ -46,12 +46,12 @@
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>wss10-binding</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>wsu10-binding</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
