--- a/bindings/wsu10-binding/pom.xml
+++ b/bindings/wsu10-binding/pom.xml
@@ -22,9 +22,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.apache.ws.security</groupId>
-        <artifactId>wss4j</artifactId>
+        <artifactId>wss4j-parent</artifactId>
         <version>2.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
