--- a/streaming-ws-policy/pom.xml
+++ b/streaming-ws-policy/pom.xml
@@ -24,7 +24,8 @@
 
     <parent>
         <groupId>org.apache.ws.security</groupId>
-        <artifactId>wss4j</artifactId>
+        <artifactId>wss4j-parent</artifactId>
+        <relativePath>../parent/pom.xml</relativePath>
         <version>2.0-SNAPSHOT</version>
     </parent>
     <groupId>org.swssf</groupId>
@@ -36,12 +37,12 @@
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>streaming-ws-security</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>rampart-policy</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>wsdl4j</groupId>
@@ -50,8 +51,14 @@
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>streaming-ws-security</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ws.security</groupId>
+            <artifactId>wss4j-dom</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -67,12 +74,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ws.security</groupId>
-            <artifactId>wss4j-dom</artifactId>
-            <version>2.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
