--- a/streaming-ws-security/pom.xml
+++ b/streaming-ws-security/pom.xml
@@ -24,7 +24,8 @@
 
     <parent>
         <groupId>org.apache.ws.security</groupId>
-        <artifactId>wss4j</artifactId>
+        <artifactId>wss4j-parent</artifactId>
+        <relativePath>../parent/pom.xml</relativePath>
         <version>2.0-SNAPSHOT</version>
     </parent>
     <groupId>org.swssf</groupId>
@@ -36,22 +37,22 @@
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>wss10-binding</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>wss11-binding</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.swssf</groupId>
             <artifactId>ws-secureconversation-binding</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.ws.security</groupId>
             <artifactId>wss4j-dom</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
