--- a/wss4j-dom/pom.xml
+++ b/wss4j-dom/pom.xml
@@ -23,7 +23,8 @@
 
     <parent>
         <groupId>org.apache.ws.security</groupId>
-        <artifactId>wss4j</artifactId>
+        <artifactId>wss4j-parent</artifactId>
+        <relativePath>../parent/pom.xml</relativePath>
         <version>2.0-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.ws.security</groupId>
