--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>org.apache.ws.security</groupId>
     <artifactId>wss4j</artifactId>
     <packaging>bundle</packaging>
-    <name>WSS4J</name>
+    <name>Apache WSS4J</name>
     <version>1.6.8-SNAPSHOT</version>
     <description>
         The Apache WSS4J project provides a Java implementation of the primary security standards 
@@ -224,7 +224,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5</version>
+                    <version>2.5.1</version>
                     <configuration>
                         <source>1.5</source>
                         <target>1.5</target>
