Fixing deploy build
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1373757 13f79535-47bb-0310-9956-ffa450edef68

--- a/bindings/ws-secureconversation-binding/pom.xml
+++ b/bindings/ws-secureconversation-binding/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.swssf</groupId>
     <artifactId>ws-secureconversation-binding</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>WS-Secure-Conversation binding</name>
+    <name>Apache WSS4J WS-SecureConversation binding</name>
 
     <properties>
         <cobertura.skip>true</cobertura.skip>
