--- a/bindings/pom.xml
+++ b/bindings/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.swssf</groupId>
     <artifactId>bindings</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>Bindings</name>
+    <name>Apache WSS4J Bindings</name>
     <packaging>pom</packaging>
 
     <modules>
