--- a/bindings/wss10-binding/pom.xml
+++ b/bindings/wss10-binding/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.swssf</groupId>
     <artifactId>wss10-binding</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>WebService Security 1.0 Binding</name>
+    <name>Apache WSS4J WS-Security 1.0 Binding</name>
 
     <properties>
         <cobertura.skip>true</cobertura.skip>
