--- a/bindings/wsu10-binding/pom.xml
+++ b/bindings/wsu10-binding/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.swssf</groupId>
     <artifactId>wsu10-binding</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>WebService Security Utility 1.0 Binding</name>
+    <name>Apache WSS4J WSU 1.0 Binding</name>
 
     <properties>
         <cobertura.skip>true</cobertura.skip>
