--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -50,6 +50,8 @@
         <xml.apis.version>1.3.04</xml.apis.version>
         <commons.logging.version>1.1.1</commons.logging.version>
         <wsdl4j.version>1.6.2</wsdl4j.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <xmlunit.version>1.3</xmlunit.version>
     </properties>
 
     <dependencyManagement>
@@ -128,6 +130,16 @@
                 <groupId>wsdl4j</groupId>
                 <artifactId>wsdl4j</artifactId>
                 <version>${wsdl4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons.lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xmlunit</groupId>
+                <artifactId>xmlunit</artifactId>
+                <version>${xmlunit.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
