--- a/streaming-ws-policy/pom.xml
+++ b/streaming-ws-policy/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.swssf</groupId>
     <artifactId>streaming-ws-policy</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>Streaming WebService Policy</name>
+    <name>Apache WSS4J Streaming WS-SecurityPolicy</name>
 
     <dependencies>
         <dependency>
