--- a/streaming-ws-security/pom.xml
+++ b/streaming-ws-security/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.swssf</groupId>
     <artifactId>streaming-ws-security</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>Streaming WebService Security</name>
+    <name>Apache WSS4J Streaming WS-Security</name>
 
     <dependencies>
         <dependency>
