--- a/wss4j-dom/pom.xml
+++ b/wss4j-dom/pom.xml
@@ -30,7 +30,7 @@
     <groupId>org.apache.ws.security</groupId>
     <artifactId>wss4j-dom</artifactId>
     <packaging>bundle</packaging>
-    <name>WSS4J DOM Implementation</name>
+    <name>Apache WSS4J DOM WS-Security</name>
     <version>2.0-SNAPSHOT</version>
     
     <build>
