Updating package name for bindings
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1373765 13f79535-47bb-0310-9956-ffa450edef68

--- a/bindings/wssc-binding/pom.xml
+++ b/bindings/wssc-binding/pom.xml
@@ -28,8 +28,8 @@
         <version>2.0-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
-    <groupId>org.swssf</groupId>
-    <artifactId>ws-secureconversation-binding</artifactId>
+    <groupId>org.apache.ws.security</groupId>
+    <artifactId>wss4j-bindings-wssc</artifactId>
     <version>2.0-SNAPSHOT</version>
     <name>Apache WSS4J WS-SecureConversation binding</name>
 
@@ -44,13 +44,13 @@
             <version>${xmlsec.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.swssf</groupId>
-            <artifactId>wss10-binding</artifactId>
+            <groupId>org.apache.ws.security</groupId>
+            <artifactId>wss4j-bindings-wss10</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.swssf</groupId>
-            <artifactId>wsu10-binding</artifactId>
+            <groupId>org.apache.ws.security</groupId>
+            <artifactId>wss4j-bindings-wsu10</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
@@ -100,12 +100,12 @@
                             </plugins>
                             <episodes>
                                 <episode>
-                                    <groupId>org.swssf</groupId>
-                                    <artifactId>wsu10-binding</artifactId>
+                                    <groupId>org.apache.ws.security</groupId>
+                                    <artifactId>wss4j-bindings-wsu10</artifactId>
                                 </episode>
                                 <episode>
-                                    <groupId>org.swssf</groupId>
-                                    <artifactId>wss10-binding</artifactId>
+                                    <groupId>org.apache.ws.security</groupId>
+                                    <artifactId>wss4j-bindings-wss10</artifactId>
                                 </episode>
                             </episodes>
                         </configuration>
