--- a/bindings/pom.xml
+++ b/bindings/pom.xml
@@ -28,8 +28,8 @@
         <version>2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>org.swssf</groupId>
-    <artifactId>bindings</artifactId>
+    <groupId>org.apache.ws.security</groupId>
+    <artifactId>wss4j-bindings</artifactId>
     <version>2.0-SNAPSHOT</version>
     <name>Apache WSS4J Bindings</name>
     <packaging>pom</packaging>
@@ -38,7 +38,7 @@
         <module>wsu10-binding</module>
         <module>wss10-binding</module>
         <module>wss11-binding</module>
-        <module>ws-secureconversation-binding</module>
+        <module>wssc-binding</module>
     </modules>
 
 </project>
