--- a/bindings/wss11-binding/pom.xml
+++ b/bindings/wss11-binding/pom.xml
@@ -28,8 +28,8 @@
         <version>2.0-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
-    <groupId>org.swssf</groupId>
-    <artifactId>wss11-binding</artifactId>
+    <groupId>org.apache.ws.security</groupId>
+    <artifactId>wss4j-bindings-wss11</artifactId>
     <version>2.0-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security 1.1 Binding</name>
 
@@ -44,8 +44,8 @@
             <version>${xmlsec.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.swssf</groupId>
-            <artifactId>wsu10-binding</artifactId>
+            <groupId>org.apache.ws.security</groupId>
+            <artifactId>wss4j-bindings-wsu10</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
@@ -95,8 +95,8 @@
                             <strict>false</strict>
                             <episodes>
                                 <episode>
-                                    <groupId>org.swssf</groupId>
-                                    <artifactId>wsu10-binding</artifactId>
+                                    <groupId>org.apache.ws.security</groupId>
+                                    <artifactId>wss4j-bindings-wsu10</artifactId>
                                 </episode>
                             </episodes>
                         </configuration>
