--- a/bindings/wsu10-binding/pom.xml
+++ b/bindings/wsu10-binding/pom.xml
@@ -28,8 +28,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.swssf</groupId>
-    <artifactId>wsu10-binding</artifactId>
+    <groupId>org.apache.ws.security</groupId>
+    <artifactId>wss4j-bindings-wsu10</artifactId>
     <version>2.0-SNAPSHOT</version>
     <name>Apache WSS4J WSU 1.0 Binding</name>
 
