[WSS-355] - Removing SAMLParms
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1375031 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -50,7 +50,6 @@ missingSecurityHeader = Security header is missing
 missingSecurityProperties = SecurityProperties must not be null!
 missingUsernameToken = UsernameToken is missing
 missingUsername = Username is missing
-noCallback=WSSecurityEngine: No password callback supplied
 noCert = No certificate provided
 noCertsFound = No certificates were found for {0}
 noCipher=WSSecurityEngine: EncryptedKey does not contain xenc:CipherData/xenc:CipherValue
@@ -73,6 +72,7 @@ noPrivateKey = The private key for the supplied alias does not exist in the keys
 noReference = <Reference> token could not be retrieved
 noReference = <Reference> token could not be retrieved
 noSAMLdoc=Cannot convert SAML to DOM document
+noSAMLVersion=No SAML Version was set on the SAMLCallback
 noSecProvider = Specified security provider not available
 noSecTokRef=WSSecurityEngine: EncryptedKey does not contain ds:KeyInfo/wsse:SecurityTokenReference
 noSecurityTokenReference = The SecurityTokenReference was required but not found
