[WSS-355] - Removed old SAMLIssuer stuff
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1375068 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -71,6 +71,7 @@ noPassword=WSSecurityEngine: Callback supplied no password for: {0}
 noPrivateKey = The private key for the supplied alias does not exist in the keystore
 noReference = <Reference> token could not be retrieved
 noReference = <Reference> token could not be retrieved
+noSAMLCallbackHandler=No SAMLCallbackHandler was supplied
 noSAMLdoc=Cannot convert SAML to DOM document
 noSAMLVersion=No SAML Version was set on the SAMLCallback
 noSecProvider = Specified security provider not available
