Backporting some BSP fixes from trunk
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/1_6_x-fixes@1376581 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/org/apache/ws/security/errors.properties
+++ b/src/main/resources/org/apache/ws/security/errors.properties
@@ -104,3 +104,11 @@ kerberosLoginError=An error occurred in trying to obtain a TGT: {0}
 kerberosServiceTicketError=An error occurred in trying to obtain a service ticket
 kerberosTicketValidationError=An error occurred in trying to validate a ticket
 spnegoKeyError=An error occurred in trying to unwrap a SPNEGO key
+
+R5403=A SIGNATURE MUST NOT contain a ds:Manifest descendant element
+R5401=Any SIGNATURE_METHOD MUST NOT contain a ds:HMACOutputLength child element
+R5406="Any CANONICALIZATION_METHOD MUST contain an INCLUSIVE_NAMESPACES with a PrefixList attribute unless the PrefixList is empty"
+R5416=Any SIG_REFERENCE MUST contain a SIG_TRANSFORMS child element
+R5423=The SIG_TRANSFORM Algorithm attribute has an incorrect value
+R5412=The last SIG_TRANSFORM child of SIG_TRANSFORMS has an incorrect Algorithm attribute
+R5407= Algorithm attribute with a value of \"http://www.w3.org/2001/10/xml-exc-c14n#\" MUST contain an INCLUSIVE_NAMESPACES with an PrefixList attribute unless the PrefixList is empty
