Re-enabling the ability to use "fastinstall" profile
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1381579 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,8 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
+        <defaultGoal>install</defaultGoal>
     </build>
 
     <profiles>
