Upgrading CXF integration test to use CXF 2.6.2
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1388033 13f79535-47bb-0310-9956-ffa450edef68

--- a/cxf-integration/pom.xml
+++ b/cxf-integration/pom.xml
@@ -34,7 +34,8 @@
     <name>Streaming WS Security CXF Integration</name>
 
     <properties>
-        <cxf.version>2.5.2</cxf.version>
+        <cxf.version>2.6.2</cxf.version>
+        <spring.version>3.0.7.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -101,6 +102,12 @@
         <dependency>
             <groupId>xalan</groupId>
             <artifactId>serializer</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
