Removing SNAPSHOT tag
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/tags/1_5_13@1391067 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>wss4j</artifactId>
     <packaging>bundle</packaging>
     <name>WSS4J</name>
-    <version>1.5.13-SNAPSHOT</version>
+    <version>1.5.13</version>
     <description>
         Apache WSS4J is an implementation of the Web Services Security
         (WS-Security) being developed at OASIS Web Services Security TC.
