- update woodstox - activate profile on jdk >=1.5 - Rename module
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1399989 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/pom.xml
+++ b/ws-security-common/pom.xml
@@ -30,7 +30,7 @@
     <groupId>org.apache.ws.security</groupId>
     <artifactId>wss4j-ws-security-common</artifactId>
     <packaging>bundle</packaging>
-    <name>Apache WSS4J DOM WS-Security</name>
+    <name>Apache WSS4J WS-Security Common</name>
     <version>2.0-SNAPSHOT</version>
     
     <build>
