--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
             <id>jdk16</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
-                <jdk>1.6</jdk>
+                <jdk>[1.5,)</jdk>
             </activation>
             <dependencies>
                 <dependency>
