WSS-353 - tests and cleanups
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1407389 13f79535-47bb-0310-9956-ffa450edef68

--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -67,7 +67,7 @@ noSigCryptoFile = No crypto property file supplied to verify signature
 noSignatureUser = Signature user is not set
 noSKIHandling = Problem with SKI information: {0}
 notASOAPMessage = Request is not a valid SOAP Message
-noToken = Reference \"{0}\"
+noToken = Referenced Token \"{0}\" not found
 noTokenUser = Token user is not set
 noUserCertsFound = No certificates for user {0} were found for {1}
 noXMLSig = Cannot setup signature data structure
