- Kerberos support in StAX - WSS-359 - Kerberos refactoring - separate module for integration tests as suggested by Colm - Kerberos bugfixes - a default/standard KerberosTokenDecoderImpl without dependency to proprietary apis
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1416670 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
         <module>ws-security-common</module>
         <module>ws-security-dom</module>
         <module>ws-security-stax</module>
+        <module>integration</module>
         <module>ws-security-policy-stax</module>
         <module>cxf-integration</module>
     </modules>
