--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -36,6 +36,8 @@ ioError00 = Failed to load credentials.
 kerberosLoginError = An error occurred in trying to obtain a TGT: {0}
 kerberosServiceTicketError = An error occurred in trying to obtain a service ticket
 kerberosTicketValidationError = An error occurred in trying to validate a ticket
+kerberosCallbackContextNameNotSupplied = Callback supplied no context name
+kerberosCallbackServiceNameNotSupplied = Callback supplied no service name
 keystore = Cannot access/read keystore data
 missingCreated = Created time is missing
 missingSecurityHeader = Security header is missing
@@ -90,3 +92,4 @@ unsupportedCertType = Certificate type not supported by security provider
 unsupportedKeyId = Unsupported key identification: {0}
 unsupportedKeyInfo = Unsupported KeyInfo type
 unsupportedKeyTransp = unsupported key transport encryption algorithm: {0}
+unsupportedSecurityToken = Unsupported SecurityToken {0}
