WSS-363 Support pluggable Validation of received tokens as per DOM code.
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1433975 13f79535-47bb-0310-9956-ffa450edef68

--- a/bindings/wsu10-binding/pom.xml
+++ b/bindings/wsu10-binding/pom.xml
@@ -78,6 +78,16 @@
                             <!-- disable schema validation since the validation code
                             doesn't respect the catalog and will do online lookups :-( -->
                             <strict>false</strict>
+                            <args>
+                                <arg>-Xinheritance</arg>
+                            </args>
+                            <plugins>
+                                <plugin>
+                                    <groupId>org.jvnet.jaxb2_commons</groupId>
+                                    <artifactId>jaxb2-basics</artifactId>
+                                    <version>0.6.3</version>
+                                </plugin>
+                            </plugins>
                         </configuration>
                     </execution>
                 </executions>
